add/adaptive_page

--- a/index.html
+++ b/index.html
@@ -52,11 +52,11 @@
 
     <template id="template">
       <li class="list__task">
+        <h2 class="list__name"></h2>
         <div class="list__container">
-          <input class="list__checkbox" type="checkbox" name="complatedTask" />
-          <h2 class="list__name">123</h2>
+          <button class="button list__button-completed" type="button"></button>
+          <button class="button list__button-bin" type="button"></button>
         </div>
-        <button class="list__button-bin" type="button"></button>
       </li>
     </template>
 
